[gd_scene load_steps=4 format=3 uid="uid://d3pd7hakaer4d"]

[ext_resource type="Script" path="res://scripts/Boltbullet2.gd" id="1_3oib2"]
[ext_resource type="Texture2D" uid="uid://yxeav7431xuf" path="res://assets/Lightningbolt.png" id="4_13n8h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qa21a"]
size = Vector2(9.5, 5)

[node name="Bullet" type="Area2D"]
script = ExtResource("1_3oib2")
metadata/player = true
metadata/Delete = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.75, 0.5)
shape = SubResource("RectangleShape2D_qa21a")
metadata/Delete = false

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-1.96764, 0.545677)
rotation = 4.71239
scale = Vector2(0.0363399, 0.0529613)
texture = ExtResource("4_13n8h")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = -109.0
offset_top = -4.0
offset_right = 112.0
offset_bottom = 5.0
color = Color(1, 0, 0, 0.196078)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -5.0
offset_top = -117.0
offset_right = 4.0
offset_bottom = 118.0
color = Color(1, 0, 0, 0.196078)

[node name="VertHor" type="Timer" parent="."]
one_shot = true

[node name="Debt" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_entered" from="." to="." method="_on_area_enter"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="VertHor" to="." method="_on_vert_hor_timeout"]
[connection signal="timeout" from="Debt" to="." method="_on_debt_timeout"]
